--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -2,13 +2,38 @@
     cursor: pointer;
     background: none;
     border: none;
-
+    transition: 1s ease;
+    transform-style: preserve-3d;
+    position: relative;
 }
 .card-img {
     width: 100%;
     height: 100%;
 }
 
-.card:hover {
-    scale: 1.05;
+.card:hover .card-img {
+    filter: brightness(120%);
+}
+
+.grid.back .card{
+    transform: rotateY(180deg);
+}
+
+.card-face {
+
+    width: 100%;
+    height: 100%;
+}
+
+.card-back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(../assets/images/back-card.png) no-repeat;
+    backface-visibility: hidden;
+    background-size: contain;
+    background-position: center;
+    transform: rotateY(180deg);
 }
