--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -1,8 +1,47 @@
 .game-screen {
     width: 100%;
+    justify-content: space-between !important;
+    padding: 2rem;
 }
 .grid {
+    width: 100%;
     display: grid;
     gap: 2rem;
-    grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
+    grid-template-columns: repeat(4, minmax(100px, 200px));
+    animation: popout 1s ease-in-out forwards;
+}
+.game-field {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+@keyframes popout {
+    from {
+        transform: scale(0);
+    }
+
+    to {
+        transform: scale(1);
+    }
+}
+
+.game-header {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+.btn-back {
+    font-size: 2rem;
+}
+
+.score {
+    font-size: 2rem;
 }
