--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 #root {
   width: 100%;
-  height: 100%;
+  min-height: 100svh;
   display: flex;
   justify-content: center;
-
-
+  align-items: center;
+  overflow: hidden;
 }
 
 #root:has(.game-screen),
@@ -24,6 +24,7 @@
   top: 0;
   background-color: rgba(0, 0, 0, 0.7);
   z-index: 1;
+  transform: scale(1.1);
 }
 
 video {
@@ -36,8 +37,8 @@ video {
 }
 
 .screen {
-  max-width: 1200px;
-  height: 100%;
+  max-width: 1600px;
+  min-height: 100svh;
   display: flex;
   flex-direction: column;
   justify-content: center;
