--- a/src/styles/Dialog.css
+++ b/src/styles/Dialog.css
@@ -2,8 +2,55 @@ dialog {
     margin: auto;
     min-width: 250px;
     width: 70%;
-    max-width: 800px;
-    aspect-ratio: 16/9;
+    max-width: 700px;
     background-color: rgb(53, 54, 51);
     color: white;
+    border-radius: 1rem;
+    border: none;
+    background: url('../assets/images/wood.JPG') no-repeat;
+    background-size: cover;
+    
+}
+
+dialog[open] {
+    animation: popout 0.5s ease-in-out;
+}
+
+.dialog-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 2rem;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.dialog-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.dialog-header {
+    border-radius: 1rem;
+    font-family: var(--font-header);
+    letter-spacing: 0.2rem;
+}
+
+dialog img {
+    height: 300px;
+}
+
+@keyframes popout {
+    from {
+        transform: scale(0);
+    }
+
+    to {
+        transform: scale(1);
+    }
 }
