--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -2,14 +2,37 @@
     width: 100%;
     justify-content: space-between !important;
     padding: 2rem;
+    gap: 1rem;
 }
-.grid {
+
+.game-header {
+    display: flex;
     width: 100%;
-    display: grid;
-    gap: 2rem;
-    grid-template-columns: repeat(4, minmax(100px, 200px));
-    animation: popout 1s ease-in-out forwards;
+    justify-content: space-between;
+    align-items: center;
+    
 }
+.btn-back {
+    font-size: 2rem;
+}
+
+.score {
+    font-size: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+.grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    gap: 2rem;
+    animation: popout 1s ease-in-out forwards;
+    padding: 1rem;
+}
+
 .game-field {
     flex: 1;
     display: flex;
@@ -18,6 +41,12 @@
     gap: 1rem;
     font-size: 1.5rem;
     text-align: center;
+    width: 100%;
+}
+
+.count {
+    font-family: var(--font-header);
+    letter-spacing: 0.5rem;
 }
 
 @keyframes popout {
@@ -30,18 +59,3 @@
     }
 }
 
-.game-header {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    
-}
-
-.btn-back {
-    font-size: 2rem;
-}
-
-.score {
-    font-size: 2rem;
-}
