style loading screen

--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,4 +1,6 @@
-
+.tilt {
+    user-select: none;
+}
 .card {
     cursor: pointer;
     background: none;
@@ -19,6 +21,7 @@
 
 .grid.back .card{
     transform: rotateY(180deg);
+    
 }
 
 .card-face {
