--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,7 @@
   overflow: hidden;
 }
 
-#root:has(.game-screen),
-#root:has(.loading-screen) {
+#root:has(.game-screen) {
   background: url('assets/images/background.jpg') no-repeat;
   background-size: cover;
   background-position: center;
@@ -33,7 +32,7 @@ video {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  
+  object-position: top;
 }
 
 .screen {
@@ -44,4 +43,10 @@ video {
   justify-content: center;
   align-items: center;
   z-index: 2;
+}
+
+.loading {
+  font-family: var(--font-header);
+  font-size: 3rem;
+  letter-spacing: 0.3rem;
 }
