--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -42,3 +42,20 @@
     background-position: center;
     transform: rotateY(180deg);
 }
+
+@media (max-width: 1600px) {
+    .card {
+        width: 180px;
+    }
+  }
+
+  @media (max-width: 1200px) {
+    .card {
+        width: 150px;
+    }
+  }
+  @media (max-width: 700px) {
+    .card {
+        width: 120px;
+    }
+  }
