--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -63,3 +63,21 @@
     }
 }
 
+@media (max-width: 1600px) {
+    .grid {
+        gap: 1rem;
+        padding: 0;
+    }
+
+    .game-screen {
+        padding: 2rem 1rem;
+    }
+  }
+
+  @media (max-width: 700px) {
+    .score {
+        font-size: 1.5rem;
+    }
+
+  }
+
