--- a/src/styles/Start.css
+++ b/src/styles/Start.css
@@ -13,12 +13,13 @@
 .logo {
     animation: popout 1s ease-in-out forwards;
     max-width: 70%;
+    max-height: 50vh;
 }
 
 .start-screen h1 {
     margin-bottom: 5rem;
     font-family: var(--font-header);
-    font-size: 3rem;
+    font-size: clamp(1rem, 5vw, 3rem);
     text-transform: uppercase;
     animation: popout 1s ease-in-out forwards;
 }
