--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  background-color: rgb(117, 76, 0);
 }
 
 #root:has(.game-screen) {
