--- a/src/styles/Buttons.css
+++ b/src/styles/Buttons.css
@@ -25,7 +25,7 @@ button:not(.card) {
 }
 
 button:not(.card):hover {
-    background-color: #ff9c00;
+    background-color: var(--clr-gold);
     color: black;
 }
 
