--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  flex-direction: column;
 }
 
 #root:has(.game) {
@@ -39,7 +40,7 @@ video {
 
 .screen {
   max-width: 1600px;
-  min-height: 100vh;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
