--- a/src/App.scss
+++ b/src/App.scss
@@ -38,6 +38,14 @@ video {
   left: 0;
 }
 
+.bg-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -2;
+}
+
 .screen {
   max-width: 1600px;
   flex: 1;
